[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/GameOverPanel.gd" id=1]

[node name="GameOverPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Content" type="VBoxContainer" parent="PanelContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
alignment = 1

[node name="ResultLabel" type="Label" parent="PanelContainer/Content"]
text = "Result"
horizontal_alignment = 1

[node name="AdStatusLabel" type="Label" parent="PanelContainer/Content"]
text = ""
horizontal_alignment = 1

[node name="RewardedButton" type="Button" parent="PanelContainer/Content"]
text = "Watch Ad to Undo Last Move"

[node name="PlayAgainButton" type="Button" parent="PanelContainer/Content"]
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="PanelContainer/Content"]
text = "Main Menu"

